[package]
name = "lua-rtoml"
version = "0.1.0"
edition = "2021"

[features]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
luajit52 = ["mlua/luajit52"]
luau = ["mlua/luau"]
vendored = ["mlua/vendored"]

[lib]
name = "toml"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.8", features = ["module", "send", "serialize"] }
toml = "0.7"
